--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /Testing_Interface/~$TEMInferace Testing Log.xlsx
 /Testing_Interface/Image_Shift_Calibration/Calibration_Data/
 /Testing_Interface/Image_Shift_Calibration/~$Image Shift Calibration.xlsx
+/Testing_Interface/test_images/
