Working to package

--- a/Testing_Interface/setup.cfg
+++ b/Testing_Interface/setup.cfg
@@ -1,14 +1,16 @@
 
 [metadata]
-name = TEMInterface
-version = 1.0
+name = pyTEM
+version = 0.1.0
 description = A Python wrapper for the Thermo Fisher Scientific microscope scripting interface
 long_description = long_description
 url = https://github.com/mrl280/tem-scripting-package/
 author = BASF TEM Laboratory
 author_email = philipp.mueller@basf.com
 license = MIT
-packages=['Interface', 'uED'],
+packages =
+    TEMInterface
+    uED
 
 
 [options]
