Moving micro_ed from the pyTEM directory into pyTEM_scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Test and calibration data
-/pyTEM/test/interface/data/
-/pyTEM/test/interface/TEMInferace Testing Log.xlsx
-/pyTEM/test/interface/Image_Shift_Calibration/Calibration_Data/
-/pyTEM/test/interface/Image_Shift_Calibration/Image Shift Calibration.xlsx
-/pyTEM/test/interface/test_images/
+/pyTEM/test/data/
+/pyTEM/test/TEMInferace Testing Log.xlsx
+/pyTEM/test/image_shift_calibration/Calibration_Data/
+/pyTEM/test/image_shift_calibration/Image Shift Calibration.xlsx
+/pyTEM/test/test_images/
 
 # Distribution/packaging
 /build/
@@ -12,4 +12,4 @@
 
 # Other
 .idea/workspace.xml
-/pyTEM/test/micro_ed/check_message_ordering.py
+/pyTEM_scripts/test/micro_ed/check_message_ordering.py
